[package]
name = "rmpub"
version = "0.1.0"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
structopt = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
